<resources>
    <string name="app_name">Idee</string>
    <string name="idea_title">Collect your ideas!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_mess">Your login</string>
    <string name="hint_pass">Your password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="anonymous">Anonymous</string>
    <string name="back">Back</string>
    <string name="title_activity_registration">Registration</string>

    <string name="registration_text">Sign up to use all the advantages of idea sharing!</string>
    <string name="login_reg">Enter your login: </string>
    <string name="pass_reg">Enter password: </string>
    <string name="login_hint">Required: a-z, A-Z, 0-9 </string>
    <string name="pass_hint">Minimum 6 symbols </string>
    <string name="reg">Register!</string>

    <string name="regMess">Save changes?</string>
    <string name="da">Yes</string>
    <string name="net">No</string>
    <string name="title_activity_app">AppActivity</string>

    <string-array name="categories">
        <item>All ideas</item>
        <item>My cabinet</item>
        <item>Search...</item>
    </string-array>

    <string name="new_idea">New idea</string>

    <string name="opendrawer">Open</string>
    <string name="closedrawer">Close</string>

    <string name="new_idea_body">Enter your idea here!</string>
    <string name="add_tag">Add tag...</string>
    <string name="add_pic">Make a photo...</string>
    <string name="pick_pic">Open gallery..</string>

    <string name="my_cab_info">My cabinet</string>
    <string name="my_ideas">My ideas : </string>
    <string name="change_pic">Change pic..</string>

    <string name="submit">Submit idea</string>

    <string name="search">Enter tag to search...</string>
    <string name="search_hint">Tag must start with #</string>
    <string name="start_search">Start search</string>




</resources>
