<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/BACK" tools:context=".MainActivity">
    
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"
            android:src="@drawable/logo"/>

        <TextView android:text="@string/idea_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/logo"
            android:layout_marginTop="20dp"
            android:textSize="32dp"
            android:textColor="@color/BROWN"
            android:id="@+id/text"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_mess"
            android:textSize="25dp"
            android:id="@+id/editLogin"
            android:background="@color/LOGIN_BACK"
            android:gravity="center_horizontal|fill_vertical"
            android:textStyle="normal"
            android:layout_alignStart="@+id/text"
            android:layout_alignEnd="@+id/text"
            android:maxLength="12"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editLogin"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_pass"
            android:textSize="25dp"
            android:id="@+id/editPass"
            android:background="@color/LOGIN_BACK"
            android:gravity="center_horizontal|fill_vertical"
            android:textStyle="normal"
            android:layout_alignStart="@+id/editLogin"
            android:layout_alignEnd="@+id/editLogin"
            android:inputType="textPassword"
            android:maxLength="10"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signIn"
            android:layout_below="@+id/editPass"
            android:layout_alignStart="@+id/editPass"
            android:text="@string/sign_in"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/BLACK" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:layout_below="@+id/editPass"
            android:layout_alignEnd="@+id/editPass"
            android:text="@string/sign_up"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/BLACK" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/anonymous"
            android:layout_below="@+id/signIn"
            android:text="@string/anonymous"
            android:textSize="25dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/BLACK" />





</RelativeLayout>
</ScrollView>