<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.code_and_fix.idee.MyCabinetFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WHITE">

        <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_cab_info"
        android:textSize="30sp"
            android:fontFamily="sans-serif-condensed"
        android:textColor="@color/BACK"
            android:id="@+id/title"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textSize="20sp"
            android:textColor="@color/BACK"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/title"
            />


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/profile_pictures"
            android:layout_below="@+id/name"
            android:id="@+id/profilePic"
            android:elevation="2dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changePic"
            android:textSize="20sp"
            android:textColor="@color/BLACK"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/name"
            android:background="@android:color/transparent"
            android:text="@string/change_pic"
            android:fontFamily="sans-serif-thin"

            android:textStyle="italic" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_ideas"
            android:textSize="30sp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/DARKRED"
            android:id="@+id/idea"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_below="@+id/profilePic"/>


    </RelativeLayout>
</FrameLayout>
